<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_backdrop_movie"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/backdrop"
            android:scaleType="fitXY"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_title_movie"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/title_movie"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/details"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAllCaps="true"/>
            <TextView
                android:id="@+id/tv_overview_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/overview_movie"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date"
                        android:textStyle="bold"
                        android:layout_marginEnd="@dimen/activity_vertical_margin"/>
                    <TextView
                        android:id="@+id/tv_release_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textStyle="bold"
                        android:layout_marginEnd="@dimen/activity_vertical_margin"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_7_2"/>
                </TableRow>
            </TableLayout>
            <Button
                android:id="@+id/btn_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:layout_marginTop="10dp"
                style="@style/Widget.AppCompat.Button.Colored"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>